--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,3 +3,19 @@ footer {
   padding: 20px;
   text-align: center;
 }
+
+.btn_asLink {
+  padding: 0;
+  border-width: 0;
+  border-bottom: 1px solid #444;
+  border-radius: 0;
+  background: none;
+  font: inherit;
+  color: #444;
+}
+
+.btn_asLink:hover {
+  background-color: transparent;
+  border-color: #008183;
+  color: #008183;
+}
