--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -8,14 +8,14 @@
 
 .nav {
   margin: 0 0 30px;
-  background-color: #00acb0;
+  background-color: #4fc7c9;
   overflow: hidden;
 }
 
 .nav-link {
   float: left;
   color: #f2f2f2;
-  background-color: #00acb0;
+  background-color: #4fc7c9;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
