added custom favicon, and added email input field to registerForm

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,7 @@ body,
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
+  background: radial-gradient(circle at 100%, slateblue, aliceblue 50%, #eee 75%, rgb(220, 215, 255) 60%);
 }
 
 img {
@@ -32,8 +33,8 @@ Button
   border-color: #014041;
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #00acb0;
-  color: #f8f8f8;
+  background-color: slateblue;
+  color: aliceblue;
   font-size: 1.1rem;
   outline: 0;
   cursor: pointer;
@@ -55,7 +56,8 @@ Button
 }
 
 .btn:hover {
-  background-color: #008183;
+  background-color: aliceblue;
+  color: slateblue;
   text-decoration: none;
 }
 
@@ -101,7 +103,7 @@ Form Treatment
   max-width: 100%;
   padding: 25px;
   margin: 0 auto 20px;
-  background-color: #efefef;
+  background-color: aliceblue;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
 }
